refactor: spec updates
